--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JNTL Etch-a-Sketch</title>
+  <link rel="stylesheet" href="css/style.css">
+  <script src="js/etch-a-sketch.js" defer></script>
 </head>
 <body>
-  
+  <div class="gridPanels"></div>
 </body>
 </html>
