Add header, reset button, and set initial grid dimensions in html file, Adjust body and grid in css

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <script src="js/etch-a-sketch.js" defer></script>
 </head>
 <body>
-  <div class="gridPanels"></div>
+  <h1>JNTL Etch-a-Sketch</h1>
+  <button>Reset</button>
+  <div width="1900" height="1200" class="gridPanels"></div>
 </body>
 </html>
