--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <h1>JNTL Etch-a-Sketch</h1>
-  <button>Reset</button>
+  <button class="resetBtn">Reset</button>
   <div width="1900" height="1200" class="gridPanels"></div>
 </body>
 </html>
