--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JNTL Etch-a-Sketch</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="img/logo.svg">
   <script src="js/etch-a-sketch.js" defer></script>
 </head>
 <body>
