--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 </head>
 <body>
   <h1>JNTL Etch-a-Sketch</h1>
-  <button class="resetBtn">Reset</button>
+  <div class="buttons">
+    <button class="resetBtn">Reset</button>
+    <button class="colorBtn">RAINBOW</button>
+  </div>
   <div width="1900" height="1200" class="gridPanels"></div>
 </body>
 </html>
